osm-replicate-sequences/021-updater-deploy.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: updater
  name: updater
  namespace: osm-replicate-sequences
spec:
  replicas: 1
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app: updater
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: updater
    spec:
      containers:
      - name: updater
        image: mazdermind/replicate-sequences:latest
