osm-replicate-sequences/031-webapp-deploy.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: webapp
  name: webapp
  namespace: osm-replicate-sequences
spec:
  replicas: 1
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app: webapp
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: webapp
    spec:
      containers:
      - name: webapp
        image: mazdermind/replicate-sequences:latest
        command: ["apache2-foreground"]
